[project]
name = "cloth_simulation"
version = "0.1.0"
description = "Python project for the 'Grafica ed animazione in python' course."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "tkinter-qpython",
    "numpy"
]

# Comando CLI per eseguire main.py
[project.scripts]
clean-dataset = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
pythonpath = "src"
testpaths = ["test"]